fix: Resolved issue in signup page; added password visibility toggle
Addressed a minor issue in the signup page and introduced the option for users to toggle the visibility of the password they enter, improving the overall user experience.

--- a/src/app/auth/signup/signup.component.scss
+++ b/src/app/auth/signup/signup.component.scss
@@ -662,9 +662,6 @@
   transform: translateX(50%);
 }
 
-.profile {
-}
-
 fieldset {
   border: 1px solid #ddd !important;
   margin: 0;
