--- a/src/app/event/event-home/event-home.component.scss
+++ b/src/app/event/event-home/event-home.component.scss
@@ -1,5 +1,5 @@
-.home{
-    padding: 100px 0px;
+.home {
+  padding: 130px 0px;
 }
 
 .demo-inline-calendar-card {
